# cardiee

./: LICENSE  README.md  pyproject.toml
data/: cardiee.db
src/cardiee/: __init__.py  __main__.py  ai.py  cli.py  core.py  database.py  models.py
src/cardiee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cardiee.py
