[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardiee"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.3.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "typer>=0.17.3",
]

[project.scripts]
cardiee = "cardiee.cli:app"